<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.coin_detail.InfoFragment">

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            app:cardBackgroundColor="@color/my_grey_blue"
            app:cardCornerRadius="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_back_ios"
                app:tint="@color/my_dark_grey" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:layout_toEndOf="@+id/cv_back"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/information"
            app:fontFamily="@font/montserrat_bold"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_toolbar"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/my_grey_blue"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        app:fontFamily="@font/montserrat_medium"
                        android:text="@string/market_cap_market_capitalization"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:textSize="@dimen/_11ssp"
                        android:ellipsize="none"
                        app:autoSizeTextType="uniform"
                        app:fontFamily="@font/montserrat"
                        android:text="@string/market_cap_text"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/my_grey_blue"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        app:fontFamily="@font/montserrat_medium"
                        android:text="@string/volume"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:ellipsize="none"
                        android:text="@string/volume_text"
                        android:textSize="@dimen/_11ssp"
                        app:autoSizeTextType="uniform"
                        app:fontFamily="@font/montserrat" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/my_grey_blue"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        app:fontFamily="@font/montserrat_medium"
                        android:text="@string/available_supply_or_circulating_supply"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:textSize="@dimen/_11ssp"
                        android:ellipsize="none"
                        app:autoSizeTextType="uniform"
                        app:fontFamily="@font/montserrat"
                        android:text="@string/available_supply_text"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/my_grey_blue"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        app:fontFamily="@font/montserrat_medium"
                        android:text="@string/total_supply"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:textSize="@dimen/_11ssp"
                        android:ellipsize="none"
                        app:autoSizeTextType="uniform"
                        app:fontFamily="@font/montserrat"
                        android:text="@string/total_supply_text"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>