<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_grey_blue_bg"
    tools:context=".ui.fragments.CoinsFragment">

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_toolbar_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/titillium_bold"
            android:text="@string/app_name"
            android:textColor="@color/my_blue"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toStartOf="@id/cv_search"
            android:clickable="true"
            app:cardBackgroundColor="@color/my_grey_blue"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/cv_search"
            app:layout_constraintEnd_toStartOf="@+id/cv_search"
            app:layout_constraintTop_toTopOf="@+id/cv_search">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/settings"
                app:tint="@color/my_dark_grey" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            app:cardBackgroundColor="@color/my_grey_blue"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/search"
                app:tint="@color/my_dark_grey" />

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_toolbar"
        tools:layout_editor_absoluteX="-16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:padding="5dp"
            android:text="@string/trending_coins"
            android:textColor="@color/my_black"
            android:textSize="20sp"
            app:fontFamily="@font/titillium_bold_upright"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView2"
            tools:listitem="@layout/trending_coin_layout"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:padding="5dp"
            android:text="@string/crypto_coins"
            android:textColor="@color/my_black"
            android:textSize="20sp"
            app:fontFamily="@font/titillium_bold_upright"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_trending" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_top"
        tools:listitem="@layout/coin_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>